--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -3,12 +3,13 @@
   <configSections>
     <section name="OdenwaldConfig" type="Odenwald.OdenwaldConfig, Odenwald" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="Opcua" type="Odenwald.Input.OpcuaAdapter.OpcuaAdapterConfig, Odenwald.Input.OpcuaAdapter" />
   </configSections>
   <!--<log4net configSource="Config\log4net.config" />-->
-  <OdenwaldConfig configSource="Config\Odenwald.config" />
+  <!--<OdenwaldConfig configSource="Config\Odenwald.config" />-->
   <log4net>
     <root>
-      <level value="NONE" />
+      <level value="DEBUG" />
       <appender-ref ref="RollingFileAppender"/>
     </root>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -24,5 +25,37 @@
       </layout>
     </appender>
   </log4net>
+  <OdenwaldConfig>
+    <Settings ReadInterval="0" WriteInterval="0" Timeout="120" StoreRates="false" />
+    <Adapters>
+      <Adapter Type="input" Name="OpcUaAdapter" Class="Odenwald.Input.OpcuaAdapter.OpcuaAdapter,Odenwald.Input.OpcuaAdapter"
+               Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.Input.OpcuaAdapter.OpcuaMetric,Odenwald.Input.OpcuaAdapter" OutputMetric="" Enable="true" />
+      <Adapter Type ="output" Name="defaultOutputAdapter3" Class="Odenwald.Output.ConsoleRunnerAdapter.ConsoleRunnerAdapter,Odenwald.Output.ConsoleRunnerAdapter"
+               Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.Input.OpcuaAdapter.OpcuaMetric,Odenwald.Input.OpcuaAdapter" OutputMetric="Odenwald.DefaultMetric" Enable="true" />
+    </Adapters>
+    <MetaData>
+      <Tag Name="region" Value="ny"/>
+      <Tag Name="env" Value="prod"/>
+      <Tag Name="dc" Value="datacenter-1"/>
+    </MetaData>
+  </OdenwaldConfig>
+  <Opcua>
+    <Settings Url="opc.tcp://ac-l32-m7-lth1:51210/UA/SampleServer" FailoverTimeout="5000"/>
+    <Measurements>
+      <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
+      <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
+                   NodeId="ns=2;i=10849" CollectionType="polled" PollInterval="1000" DeadbandAbsolute="0" DeadbandRelative="0.0">
+        <Tags>
+          <Tag Name="region" Value="ny"/>
+          <Tag Name="env" Value="prod"/>
+          <Tag Name="dc" Value="datacenter-1"/>
+        </Tags>
+      </Measurement>
+      <!--MonitorResolution = ms-->
+      <Measurement Name="Int16monitored" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
+                   NodeId="ns=2;i=10847" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
 
+    </Measurements>
+
+  </Opcua>
 </configuration>
