--- a/Input/Odenwald.Input.OpcuaAdapter/opcua.config
+++ b/Input/Odenwald.Input.OpcuaAdapter/opcua.config
@@ -1,9 +1,9 @@
 ﻿<Opcua>
-  <Settings Url="opc.tcp://opcua.demo-this.com:51210/UA/SampleServer" FailoverTimeout="5000"/>
+  <Settings Url="opc.tcp://ac-l32-m7-lth1:51210/UA/SampleServer" FailoverTimeout="5000"/>
   <Measurements>
     <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
     <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value" 
-                 NodeId="ns=37;s=10849" CollectionType="polled" PollRate="60" DeadbandAbsolute="0" DeadbandRelative="0.0">
+                 NodeId="ns=37;s=10849" CollectionType="polled" PollInterval="1000" DeadbandAbsolute="0" DeadbandRelative="0.0">
       <Tags>
         <Tag Name="region" Value="ny"/>
         <Tag Name="env" Value="prod"/>
