--- a/Odenwald.OpcUaPlugin/opcua.config
+++ b/Odenwald.OpcUaPlugin/opcua.config
@@ -1,4 +1,4 @@
-﻿<Opcua>
+﻿<OpcUa>
   <Settings Url="opc.tcp://ac-l32-m7-lth1:51210/UA/SampleServer" FailoverTimeout="5000"/>
   <Measurements>
     <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
@@ -16,4 +16,4 @@
     
   </Measurements>
  
-</Opcua>
+</OpcUa>
