--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -3,7 +3,8 @@
   <configSections>
     <section name="OdenwaldConfig" type="Odenwald.OdenwaldConfig, Odenwald" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <section name="Opcua" type="Odenwald.Input.OpcuaAdapter.OpcuaAdapterConfig, Odenwald.Input.OpcuaAdapter" />
+    <section name="WindowsPerformanceCounter" type="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPluginConfig, Odenwald.WindowsPerformanceCounterPlugin" />
+    <section name="OpcUa" type="Odenwald.OpcUaPlugin.OpcUaPluginConfig, Odenwald.OpcUaPlugin" />
   </configSections>
   <!--<log4net configSource="Config\log4net.config" />-->
   <!--<OdenwaldConfig configSource="Config\Odenwald.config" />-->
@@ -26,25 +27,97 @@
     </appender>
   </log4net>
   <OdenwaldConfig>
-    <Settings ReadInterval="0" WriteInterval="0" Timeout="120" StoreRates="false" />
-    <Adapters>
-      <Adapter Type="input" Name="OpcUaAdapter" Class="Odenwald.Input.OpcuaAdapter.OpcuaAdapter,Odenwald.Input.OpcuaAdapter"
-               Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.Input.OpcuaAdapter.OpcuaMetric,Odenwald.Input.OpcuaAdapter" OutputMetric="" Enable="true" />
-      <Adapter Type ="output" Name="defaultOutputAdapter3" Class="Odenwald.Output.ConsoleRunnerAdapter.ConsoleRunnerAdapter,Odenwald.Output.ConsoleRunnerAdapter"
-               Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.Input.OpcuaAdapter.OpcuaMetric,Odenwald.Input.OpcuaAdapter" OutputMetric="Odenwald.DefaultMetric" Enable="true" />
-    </Adapters>
+    <GeneralSettings Interval="2" Timeout="120" StoreRates="false" />
+    <Plugins>
+      <Plugin Name="WindowsPerformanceCounter" Class="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPlugin,Odenwald.WindowsPerformanceCounterPlugin"
+             Enable="false" />
+      <Plugin Name="Console" Class="Odenwald.ConsolePlugin.ConsolePlugin,Odenwald.ConsolePlugin"
+              Enable="true" />
+      <Plugin Name="OpcUa" Class="Odenwald.OpcUaPlugin.OpcUaPlugin,Odenwald.OpcUaPlugin"
+              Enable="true" />
+    </Plugins>
     <MetaData>
       <Tag Name="region" Value="ny"/>
       <Tag Name="env" Value="prod"/>
       <Tag Name="dc" Value="datacenter-1"/>
     </MetaData>
-  </OdenwaldConfig>
-  <Opcua>
+  </OdenwaldConfig> 
+  <WindowsPerformanceCounter>
+    <RefreshInstancesConfiguration Enable="true" Interval="900" />
+    <Counters>
+      <Counter Category="Processor" Name="% Processor Time" Instance="_Total"
+               CollectdPlugin="cpu" CollectdPluginInstance="" CollectdType="percent" CollectdTypeInstance="processor" />
+      <Counter Category="Processor" Name="% Idle Time" Instance="_Total"
+               CollectdPlugin="cpu" CollectdPluginInstance="" CollectdType="percent" CollectdTypeInstance="idle" />
+      <Counter Category="Processor" Name="% Privileged Time" Instance="_Total"
+               CollectdPlugin="cpu" CollectdPluginInstance="" CollectdType="percent" CollectdTypeInstance="system" />
+      <Counter Category="Processor" Name="% User Time" Instance="_Total"
+               CollectdPlugin="cpu" CollectdPluginInstance="" CollectdType="percent" CollectdTypeInstance="user" />
+      <Counter Category="Processor" Name="% Interrupt Time" Instance="_Total"
+               CollectdPlugin="cpu" CollectdPluginInstance="" CollectdType="percent" CollectdTypeInstance="interrupt" />
+
+      <Counter Category="Memory" Name="Available Bytes"
+               CollectdPlugin="memory" CollectdPluginInstance="" CollectdType="memory" CollectdTypeInstance="free" />
+      <Counter Transformer="MemoryAvailableBytesToUsedPercentage"
+               Category="Memory" Name="Available Bytes"
+               CollectdPlugin="memory" CollectdPluginInstance="" CollectdType="percent" CollectdTypeInstance="used" />
+      <Counter Category="Memory" Name="Page Faults/sec"
+               CollectdPlugin="memory" CollectdPluginInstance="" CollectdType="memory" CollectdTypeInstance="faults_per_sec" />
+      <Counter Category="Memory" Name="% Committed Bytes In Use"
+               CollectdPlugin="memory" CollectdPluginInstance="" CollectdType="memory" CollectdTypeInstance="percent_committed_inuse" />
+
+      <Counter Category="Paging File" Name="% Usage" Instance="_Total"
+               CollectdPlugin="percent" CollectdPluginInstance="" CollectdType="swap" CollectdTypeInstance="percent_used" />
+
+      <Counter Transformer="Averages" TransformerParameters="60,300,900"
+               Category="System" Name="Processor Queue Length"
+               CollectdPlugin="load" CollectdPluginInstance="" CollectdType="load" CollectdTypeInstance="" />
+
+      <Counter Category="System" Name="System Up Time"
+               CollectdPlugin="uptime" CollectdPluginInstance="" CollectdType="uptime" CollectdTypeInstance="" />
+      <Counter Category="System" Name="System Calls/sec"
+               CollectdPlugin="system" CollectdPluginInstance="" CollectdType="gauge" CollectdTypeInstance="sys_calls_per_sec" />
+
+      <Counter Category="System" Name="File Data Operations/sec"
+               CollectdPlugin="io" CollectdPluginInstance="" CollectdType="gauge" CollectdTypeInstance="file_ops_per_sec" />
+      <Counter Category="System" Name="File Read Operations/sec"
+               CollectdPlugin="io" CollectdPluginInstance="" CollectdType="gauge" CollectdTypeInstance="file_read_ops_per_sec" />
+      <Counter Category="System" Name="File Write Operations/sec"
+               CollectdPlugin="io" CollectdPluginInstance="" CollectdType="gauge" CollectdTypeInstance="file_write_ops_per_sec" />
+
+      <Counter Category="LogicalDisk" Name="% Free Space" Instance="*"
+               CollectdPlugin="df" CollectdType="percent_bytes" CollectdTypeInstance="free" />
+
+      <Counter Transformer="PercentageToRemainingPercentage"
+               Category="LogicalDisk" Name="% Free Space" Instance="*"
+               CollectdPlugin="df" CollectdType="percent_bytes" CollectdTypeInstance="used" />
+
+      <Counter Transformer="MegaBytesToBytes"
+               Category="LogicalDisk" Name="Free Megabytes" Instance="*"
+               CollectdPlugin="df" CollectdType="df_complex" CollectdTypeInstance="free" />
+
+      <Counter Transformer="CountProcessesAndThreads"
+               Category="Process" Name=""
+               CollectdPlugin="processes" CollectdPluginInstance="all" CollectdType="ps_count" CollectdTypeInstance="" />
+
+      <Counter Category="Process" Name="Handle Count" Instance="_Total"
+               CollectdPlugin="processes" CollectdPluginInstance="" CollectdType="gauge" CollectdTypeInstance="handles" />
+
+      <Counter Category="Network Interface" Name="Packets Received/Sec,Packets Sent/Sec" Instance="*"
+               CollectdPlugin="interface" CollectdType="if_packets" CollectdTypeInstance="" />
+      <Counter Category="Network Interface" Name="Bytes Received/Sec,Bytes Sent/Sec" Instance="*"
+               CollectdPlugin="interface" CollectdType="if_octets" CollectdTypeInstance="" />
+      <Counter Category="Network Interface" Name="Packets Received Errors,Packets Outbound Errors" Instance="*"
+               CollectdPlugin="interface" CollectdType="if_errors" CollectdTypeInstance="" />
+    </Counters>
+  </WindowsPerformanceCounter>
+
+  <OpcUa>
     <Settings Url="opc.tcp://ac-l32-m7-lth1:51210/UA/SampleServer" FailoverTimeout="5000"/>
     <Measurements>
       <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
       <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                   NodeId="ns=2;i=10849" CollectionType="polled" PollInterval="1000" DeadbandAbsolute="0" DeadbandRelative="0.0">
+                   NodeId="ns=2;i=10849" CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0">
         <Tags>
           <Tag Name="region" Value="ny"/>
           <Tag Name="env" Value="prod"/>
@@ -52,10 +125,10 @@
         </Tags>
       </Measurement>
       <!--MonitorResolution = ms-->
-      <Measurement Name="Int16monitored" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                   NodeId="ns=2;i=10847" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
+      <Measurement Name="Int32monitored" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
+                   NodeId="ns=2;i=10849" CollectionType="monitored" MonitorResolution="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
 
     </Measurements>
 
-  </Opcua>
+  </OpcUa>
 </configuration>
