--- a/Odenwald/Config/Odenwald.config
+++ b/Odenwald/Config/Odenwald.config
@@ -1,15 +1,11 @@
 ﻿<OdenwaldConfig>
-  <Settings ReadInterval="2" WriteInterval="1" Timeout="120" StoreRates="false" />
-  <Adapters>
-    <Adapter Type="input" Name="defaultInputAdapter1" Class="Odenwald.DefaultInputAdapter" 
-             Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.DefaultMetric" OutputMetric="" Enable="true" />
-    <Adapter Type="input" Name="defaultInputAdapter2" Class="Odenwald.DefaultInputAdapter"
-             Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.DefaultMetric" OutputMetric="" Enable="true" />
-    <Adapter Type ="output" Name="defaultOutputAdapter3" Class="Odenwald.Output.ConsoleRunnerAdapter.ConsoleRunnerAdapter,Odenwald.Output.ConsoleRunnerAdapter" 
-             Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.DefaultMetric" OutputMetric="Odenwald.DefaultMetric" Enable="true" />
-    <Adapter Type ="output" Name="defaultOutputAdapter2" Class="Odenwald.Output.ConsoleRunnerAdapter.ConsoleRunnerAdapter,Odenwald.Output.ConsoleRunnerAdapter"
-             Processor="Odenwald.DefaultProcessor" InputMetric ="Odenwald.DefaultMetric" OutputMetric="Odenwald.DefaultMetric" Enable="true" />
-  </Adapters>
+  <GeneralSettings Interval="30" Timeout="120" StoreRates="false" />
+  <Plugins>
+    <Plugin Name="WindowsPerformanceCounter" Class="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPlugin,Odenwald.WindowsPerformanceCounterPlugin"
+           Enable="true" />
+    <Plugin Name="Console" Class="Odenwald.ConsolePlugin.ConsolePlugin,Odenwald.ConsolePlugin"
+            Enable="true" />
+  </Plugins>
   <MetaData>
     <Tag Name="region" Value="ny"/>
     <Tag Name="env" Value="prod"/>
