--- a/Odenwald.OpcUaPlugin/Odenwald.OpcUaPlugin.csproj
+++ b/Odenwald.OpcUaPlugin/Odenwald.OpcUaPlugin.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OpcUaHelper.cs" />
     <Compile Include="OpcUaPlugin.cs" />
     <Compile Include="OpcUaPluginConfig.cs" />
     <Compile Include="OpcUaMetric.cs" />
