update influxDb and opc ua

--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -5,6 +5,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="WindowsPerformanceCounter" type="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPluginConfig, Odenwald.WindowsPerformanceCounterPlugin" />
     <section name="OpcUa" type="Odenwald.OpcUaPlugin.OpcUaPluginConfig, Odenwald.OpcUaPlugin" />
+    <section name="InfluxDb" type="Odenwald.InfluxDbPlugin.InfluxDbAdapterConfig, Odenwald.InfluxDbPlugin" />
   </configSections>
   <!--<log4net configSource="Config\log4net.config" />-->
   <!--<OdenwaldConfig configSource="Config\Odenwald.config" />-->
@@ -131,4 +132,7 @@
     </Measurements>
 
   </OpcUa>
+  <InfluxDb>
+    <Settings Url="http://172.28.0.84:9092" Interval="3000" Database="testdb" Username="" Password="" />
+  </InfluxDb>
 </configuration>
