correct measurement name in data point name of InfluxDb + remove unused file

--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -5,7 +5,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="WindowsPerformanceCounter" type="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPluginConfig, Odenwald.WindowsPerformanceCounterPlugin" />
     <section name="OpcUa" type="Odenwald.OpcUaPlugin.OpcUaPluginConfig, Odenwald.OpcUaPlugin" />
-    <section name="InfluxDb" type="Odenwald.InfluxDbPlugin.InfluxDbAdapterConfig, Odenwald.InfluxDbPlugin" />
+    <section name="InfluxDb" type="Odenwald.InfluxDbPlugin.InfluxDbPluginConfig, Odenwald.InfluxDbPlugin" />
   </configSections>
   <!--<log4net configSource="Config\log4net.config" />-->
   <!--<OdenwaldConfig configSource="Config\Odenwald.config" />-->
@@ -36,6 +36,8 @@
               Enable="true" />
       <Plugin Name="OpcUa" Class="Odenwald.OpcUaPlugin.OpcUaPlugin,Odenwald.OpcUaPlugin"
               Enable="true" />
+      <Plugin Name="InfluxDb" Class="Odenwald.InfluxDbPlugin.InfluxDbPlugin,Odenwald.InfluxDbPlugin"
+            Enable="true" />
     </Plugins>
     <MetaData>
       <Tag Name="region" Value="ny"/>
@@ -126,13 +128,13 @@
         </Tags>
       </Measurement>
       <!--MonitorResolution = ms-->
-      <Measurement Name="Int32monitored" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                   NodeId="ns=2;i=10849" CollectionType="monitored" MonitorResolution="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
+      <Measurement Name="Int16monitored" DataType="number" Path="Data.Dynamic.Scalar.Int16Value"
+                   NodeId="ns=2;i=10847" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
 
     </Measurements>
 
   </OpcUa>
   <InfluxDb>
-    <Settings Url="http://172.28.0.84:9092" Interval="3000" Database="testdb" Username="" Password="" />
+    <Settings Url="http://172.28.0.150:8086" Interval="3000" Database="odenwald" Username="odenwald" Password="06291" />
   </InfluxDb>
 </configuration>
